.......... [ZBX-7811] added example robots.txt file (Richlv)
A.F....... [ZBX-1357] updated Brazilian Portuguese, Italian, Japanese, Polish, Romanian, Russian, Slovak and Spanish translations; thanks to Zabbix translators (Richlv)
........S. [ZBX-7555] removed "select" statement from the history cache; increased the cache performance (Sasha)

Bug fixes:
.......PS. [ZBX-8287] truncate long text values to maximum field length before inserting into database (Andris)
........S. [ZBX-3163] fixed trigger evaluation order so that it takes dependencies into account (asaveljevs)
A.F....... [ZBX-7373] improved performance of latest data and item overview pages by taking data for limited period only (Pavels)
..F....... [ZBX-8200] improved performance of Monitoring / Events page (Krists)
A.F....... [ZBX-7983] improved performance of "System status" widget (Eduard, Ivo)
........S. [ZBX-7901] improved value cache database operations when caching count based requests (wiper)
.......PS. [ZBX-8188] fixed IPMI items staying supported when sensor data becomes unavailable (asaveljevs, dimir)
........S. [ZBX-8243] added log message when the reason for an item being in an unsupported state changes (Juris)
A......... [ZBX-8195] fixed web scenario step validation for httptest.create and httptest.update API methods (Krists)
...G...... [ZBX-6531] fixed memory leak in filesystem discovery on AIX systems (Juris)
..F....... [ZBX-8241] fixed duplicate display of actions in media type list (Andrejs)
...G...... [ZBX-8269] fixed processing of active checks in agent (Andris)
...G...... [ZBX-8238] fixed updating agent 'mtime' for logrt[] items; thanks to Yoshinori Komuro for patch (Andris)
........S. [ZBX-8143] triggers are now committed to the database individually when setting to an unknown state to avoid potential locking between the poller and history syncer (Juris)